--- a/MiniProjet/html/BUT.html
+++ b/MiniProjet/html/BUT.html
@@ -6,34 +6,42 @@
     <title>Présentation du BUT</title>
 </head>
 <body>
-    <div class="header">
-        <div>
-            <a href="../index.html">
-                <img src="../images/logo_info.png" alt="iut informatique logo">
-            </a>
-        </div>
-        <div class="title">
-            <h1>Université Paul Sabatier</h1>
-        </div>
-    </div>
-    <div class="navbar">
-        <div class="menu">
-            <a href="../index.html">Accueil</a>
-            <a href="BUT.html">Présentation du BUT</a>
-            <div class="dropdown">
-                <a href="#">Compétences &#9662;</a>
-                <div class="dropdown-content">
-                    <a href="competence1.html">Compétence 1</a>
-                    <a href="competence2.html">Compétence 2</a>
-                    <a href="competence3.html">Compétence 3</a>
-                    <a href="competence4.html">Compétence 4</a>
-                    <a href="competence5.html">Compétence 5</a>
-                    <a href="competence6.html">Compétence 6</a>
-                </div>
+    <div class="radius">
+        <div class="header">
+            <div class="images-left">
+                <a href="../index.html">
+                    <img src="../images/logo_info.png" alt="iut informatique logo">
+                </a>
+                <img src="../images/logo_iut.png" alt="Logo IUT">
             </div>
-            <a href="contact.html">Contact</a>
+            <div class="title">
+                <h1>Université Paul Sabatier</h1>
+            </div>
+            <div class="images-right">
+                <img src="../images/BUTImg.png" alt="Logo BUT">
+            </div>
+        </div>
+        <div class="navbar">
+            <div class="menu">
+                <a href="../index.html">Accueil</a>
+                <a href="BUT.html">Présentation du BUT</a>
+                <div class="dropdown">
+                    <a href="#">Compétences &#9662;</a>
+                    <div class="dropdown-content">
+                        <a href="competence1.html">Compétence 1</a>
+                        <a href="competence2.html">Compétence 2</a>
+                        <a href="competence3.html">Compétence 3</a>
+                        <a href="competence4.html">Compétence 4</a>
+                        <a href="competence5.html">Compétence 5</a>
+                        <a href="competence6.html">Compétence 6</a>
+                    </div>
+                </div>
+                <a href="contact.html">Contact</a>
+            </div>
         </div>
     </div>
+    
+    
 
     <div class="bloc1">
         <div class="bloc2">
