--- a/MiniProjet/html/competence6.html
+++ b/MiniProjet/html/competence6.html
@@ -3,44 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Conduire un projet</title>
+    <title>Travailler en équipe</title>
 </head>
 <body>
-    <div class="header">
-        <div>
-            <a href="../index.html">
-                <img src="../images/logo_info.png" alt="iut informatique logo">
-            </a>
-        </div>
-        <div class="title">
-            <h1>Université Paul Sabatier</h1>
-        </div>
-    </div>
-    <div class="navbar">
-        <div class="menu">
-            <a href="../index.html">Accueil</a>
-            <a href="BUT.html">Présentation du BUT</a>
-            <div class="dropdown">
-                <a href="#">Compétences &#9662;</a>
-                <div class="dropdown-content">
-                    <a href="competence1.html">Compétence 1</a>
-                    <a href="competence2.html">Compétence 2</a>
-                    <a href="competence3.html">Compétence 3</a>
-                    <a href="competence4.html">Compétence 4</a>
-                    <a href="competence5.html">Compétence 5</a>
-                    <a href="competence6.html">Compétence 6</a>
-                </div>
+    <div class="radius">
+        <div class="header">
+            <div class="images-left">
+                <a href="../index.html">
+                    <img src="../images/logo_info.png" alt="iut informatique logo">
+                </a>
+                <img src="../images/logo_iut.png" alt="Logo IUT">
             </div>
-            <a href="contact.html">Contact</a>
+            <div class="title">
+                <h1>Université Paul Sabatier</h1>
+            </div>
+            <div class="images-right">
+                <img src="../images/BUTImg.png" alt="Logo BUT">
+            </div>
+        </div>
+        <div class="navbar">
+            <div class="menu">
+                <a href="../index.html">Accueil</a>
+                <a href="BUT.html">Présentation du BUT</a>
+                <div class="dropdown">
+                    <a href="#">Compétences &#9662;</a>
+                    <div class="dropdown-content">
+                        <a href="competence1.html">Compétence 1</a>
+                        <a href="competence2.html">Compétence 2</a>
+                        <a href="competence3.html">Compétence 3</a>
+                        <a href="competence4.html">Compétence 4</a>
+                        <a href="competence5.html">Compétence 5</a>
+                        <a href="competence6.html">Compétence 6</a>
+                    </div>
+                </div>
+                <a href="contact.html">Contact</a>
+            </div>
         </div>
     </div>
 
-    <h1 class="TitrePage">Conduire un projet</h1>
+    <h1 class="TitrePage">Travailler en équipe</h1>
     <div class="bloc1 horizontal">
-        <img src="../images/competence5.JPG" alt="Niveau 1 Identifier les besoins des clients et des utilisateurs">
+        <img src="../images/competence6.JPG" alt="Niveau 1 Identifier ses aptitudes pour travailler dans une equipe">
         <p class="paragraphe C1"> Les apprentissage critiques ciblés dans cette compétence sont : <br>
-            – AC15.01 | Appréhender les besoins du client et de l’utilisateur <br>
-            – AC15.03 | Identifier les acteurs et les différentes phases d’un cycle de développement
+            – AC16.01 | Appréhender l’écosystème numérique <br>
+            – AC16.04 | Acquérir les compétences interpersonnelles pour travailler en équipe
         </p>
     </div>
 
@@ -55,15 +61,21 @@
                 <td>Ressource</td>
                 <td>R1.02</td>
                 <td>R1.08</td>
+                <td>R1.09</td>
+                <td>R1.10</td>
                 <td>R1.11</td>
+                <td>R1.12</td>
                 <td>SAE</td>
 
             </tr>
             <tr>
                 <td>Coef</td>
+                <td>5</td>
                 <td>11</td>
-                <td>27</td>
-                <td>15</td>
+                <td>11</td>
+                <td>11</td>
+                <td>11</td>
+                <td>11</td>
                 <td>40</td>
 
             </tr>
@@ -75,8 +87,9 @@
     </div>
 
     <div class="bloc1">
-        <p class="TitreParagraphe C1"> SAE 5 : Recueil de besoins</p>
-        <p class="paragraphe C1"> Dans un contexte professionnel, un client demande de formaliser ses attentes liées à un projet </p>
+        <p class="TitreParagraphe C1"> SAE 6 : Découverte de l'environement économique et écologique</p>
+        <p class="paragraphe C1"> En se plaçant dans un contexte prédéterminé, il faut effectuer une présentation numérique du positionnement économique ou
+            écologique de l’entreprise ou d’un ensemble d’entreprises, en utilisant des informations et outils pertinents </p>
     </div>
 
     <div class="InterBloc">
@@ -102,7 +115,7 @@
                     du client et de l’utilisateur.
                 </p>
             </div>
-        </div> 
+        </div>  
 
         <div class="blocRessources">
             <!-- a multiplier pour chaque nouvelle ressources -->
@@ -120,6 +133,45 @@
                     qui la composent. Les défis organisationnels du XXI siècle, comme la transformation numérique des organisations, amènent
                     également à se questionner sur les évolutions informatiques et managériales dans le but de mieux appréhender l’écosystème
                     numérique et le futur contexte professionnel.
+                </p>
+            </div>
+        </div>  
+
+        <div class="blocRessources">
+            <!-- a multiplier pour chaque nouvelle ressources -->
+            <div class="vertical">
+                <div class="horizontal">
+                    <p class="Numero">R1.09</p>
+                    <p class="TitreParagraphe">Introduction à l’économie durable et numérique </p>
+                </div>
+                <p class="paragraphe"> Les apprentissages critiques ciblés dans cette ressource sont : <br>
+                    – AC14.01 | Mettre à jour et interroger une base de données relationnelle (en requêtes directes ou à travers une application) <br>
+                    – AC14.02 | Visualiser des données <br>
+                    – AC16.01 | Appréhender l’écosystème numérique
+                </p>
+                <p class="paragraphe">L’objectif de cette ressource est de découvrir l’économie durable et responsable. L’essor des données de l’information dans la
+                    société actuelle amène des nouveaux défis économiques. L’étude de la donnée dans son contexte permet une meilleure visua-
+                    lisation des données de l’information manipulées au quotidien par l’informaticien. Les fondements de l’économie représentent
+                    un incontournable pour appréhender l’écosystème numérique.
+                </p>
+            </div>
+        </div> 
+
+        <div class="blocRessources">
+            <!-- a multiplier pour chaque nouvelle ressources -->
+            <div class="vertical">
+                <div class="horizontal">
+                    <p class="Numero">R1.10</p>
+                    <p class="TitreParagraphe">Anglais </p>
+                </div>
+                <p class="paragraphe"> Les apprentissages critiques ciblés dans cette ressource sont : <br>
+                    – AC11.03 | Faire des essais et évaluer leurs résultats en regard des spécifications <br>
+                    – AC11.04 | Développer des interfaces utilisateurs <br>
+                    – AC13.01 | Identifier les différents composants (matériels et logiciels) d’un système numérique <br>
+                    – AC16.04 | Acquérir les compétences interpersonnelles pour travailler en équipe
+                </p>
+                <p class="paragraphe">L’objectif de la ressource est d’introduire l’anglais de spécialité informatique et de développer sa culture générale et scientifique.
+                    Cette ressource permet l’acquisition du vocabulaire de base de l’informatique.
                 </p>
             </div>
         </div> 
@@ -145,10 +197,30 @@
                     formes diverses du papier au web) à destination d’un client ou d’une équipe.
                 </p>
             </div>
+        </div> 
+
+        <div class="blocRessources">
+            <!-- a multiplier pour chaque nouvelle ressources -->
+            <div class="vertical">
+                <div class="horizontal">
+                    <p class="Numero">R1.12</p>
+                    <p class="TitreParagraphe">Projet professionnel et personnel </p>
+                </div>
+                <p class="paragraphe"> Les apprentissages critiques ciblés dans cette ressource sont : <br>
+                    – AC11.01 | Implémenter des conceptions simples <br>
+                    – AC11.02 | Élaborer des conceptions simples <br>
+                    – AC11.03 | Faire des essais et évaluer leurs résultats en regard des spécifications <br>
+                    – AC11.04 | Développer des interfaces utilisateurs
+                </p>
+                <p class="paragraphe">L’objectif de cette ressource est d’identifier le savoir-être et le savoir-faire. Cette ressource permet de se familiariser avec
+                    les éléments constitutifs du B.U.T. informatique (AC), de mieux cerner sa connaissance de soi et d’apprendre à définir ses
+                    compétences au travers de ses expériences.
+                </p>
+            </div>
         </div>
     </div>
     <div class="center">
-        <a href="competence5.html"> haut de la page </a>
+        <a href="competence6.html"> haut de la page </a>
     </div>
 
     <footer class="footer">
