--- a/MiniProjet/index.html
+++ b/MiniProjet/index.html
@@ -1,40 +1,52 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page d'accueil - Grégoire GIBRAT</title>
-    <link rel="stylesheet" href="css/styles.css">
+   <meta charset="UTF-8">
+   <meta name="description" content="Site web étudiant pour présenter le BUT Informatique de l'université Paul Sabatier à Toulouse">
+   <meta name="keywords" content="ompétences BUT Informatique Paul Sabatier">
+   <meta name="author" content="Simonet Michon Viguier-Marie Gibrat">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>BUT Informatique - Université Paul Sabatier</title>
+   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="header">
-        <div>
-            <a href="index.html">
-                <img src="./images/logo_info.png" alt="iut informatique logo">
-            </a>
-        </div>
-        <div class="title">
-            <h1>Université Paul Sabatier</h1>
-        </div>
-    </div>
-    <div class="navbar">
-        <div class="menu">
-            <a href="index.html">Accueil</a>
-            <a href="./html/BUT.html">Présentation du BUT</a>
-            <div class="dropdown">
-                <a href="#">Compétences &#9662;</a>
-                <div class="dropdown-content">
-                    <a href="./html/competence1.html">Compétence 1</a>
-                    <a href="./html/competence2.html">Compétence 2</a>
-                    <a href="./html/competence3.html">Compétence 3</a>
-                    <a href="./html/competence4.html">Compétence 4</a>
-                    <a href="./html/competence5.html">Compétence 5</a>
-                    <a href="./html/competence6.html">Compétence 6</a>
-                </div>
-            </div>
-            <a href="./html/contact.html">Contact</a>
-        </div>
-    </div>
+   <div class="radius">
+      <div class="header">
+          <div class="images-left">
+              <a href="index.html">
+                  <img src="./images/logo_info.png" alt="iut informatique logo">
+              </a>
+              <img src="./images/logo_iut.png" alt="Logo IUT">
+          </div>
+          <div class="title">
+              <h1>Université Paul Sabatier</h1>
+          </div>
+          <div class="images-right">
+              <img src="./images/BUTImg.png" alt="Logo BUT">
+          </div>
+      </div>
+      <div class="navbar">
+          <div class="menu">
+              <a href="index.html">Accueil</a>
+              <a href="./html/BUT.html">Présentation du BUT</a>
+              <div class="dropdown">
+                  <a href="#">Compétences &#9662;</a>
+                  <div class="dropdown-content">
+                     <a href="./html/competence1.html">Compétence 1</a>
+                     <a href="./html/competence2.html">Compétence 2</a>
+                     <a href="./html/competence3.html">Compétence 3</a>
+                     <a href="./html/competence4.html">Compétence 4</a>
+                     <a href="./html/competence5.html">Compétence 5</a>
+                     <a href="./html/competence6.html">Compétence 6</a>
+                  </div>
+              </div>
+              <a href="./html/contact.html">Contact</a>
+              <a id="modeToggle" href="#">Mode Sombre</a>
+          </div>
+      </div>
+  </div>
+
+
    <div class="mainbody">
          <div class="MainContentBloc">
             <div class="BlocImage" >
