--- a/MiniProjet/html/BUT.html
+++ b/MiniProjet/html/BUT.html
@@ -15,7 +15,7 @@
                 <img src="../images/logo_iut.png" alt="Logo IUT">
             </div>
             <div class="title">
-                <h1>Université Paul Sabatier</h1>
+                <h1>Université Paul Sabatier Toulouse</h1>
             </div>
             <div class="images-right">
                 <img src="../images/BUTImg.png" alt="Logo BUT">
