--- a/Mini projet 2024 F4/html/presentation.html
+++ b/Mini projet 2024 F4/html/presentation.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Présentation</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="../css/style.css">
         <meta name="présentation" content="Présentation des différentes compétences du BUT informatique et des ressources qu'elles impliquent.">
     </head>
     <body>
