--- a/Mini projet 2024 F4/html/competence1.html
+++ b/Mini projet 2024 F4/html/competence1.html
@@ -60,7 +60,7 @@
             </div>
         </div>
         <hr>
-        <div class="detailcompetence1">
+        <div class="detailcompetence comp1color">
             <h3>Évaluation :</h3>
             <table class="table-evaluation">
                 <tr class="table-evaluation couleurC1fonce">
@@ -72,7 +72,7 @@
             </table>
         </div>
         <hr>
-        <div class="detailcompetence1">
+        <div class="detailcompetence comp1color">
             <h3>SAE S1.01 : Implémentation d'un besoin client</h3>
             <div class="descriptioncompetence">
                 <ul>
@@ -94,7 +94,7 @@
             </div>
         </div>
         <hr>
-        <div class="detailcompetence1">
+        <div class="detailcompetence comp1color">
             <div>
                 <div class="titreressource">
                     <h3 class="couleurC1fonce">R1.01</h3>
