--- a/Mini projet 2024 F4/html/competence2.html
+++ b/Mini projet 2024 F4/html/competence2.html
@@ -59,7 +59,7 @@
             </div>
         </div>
         <hr>
-        <div class="detailcompetence2">
+        <div class="detailcompetence comp2color">
             <h3>Évaluation :</h3>
             <table class="table-evaluation">
                 <tr class="table-evaluation couleurC2fonce">
@@ -71,7 +71,7 @@
             </table>
         </div>
         <hr>
-        <div class="detailcompetence2">
+        <div class="detailcompetence comp2color">
             <h3>SAE S1.02 : Comparaison d’approches algorithmiques</h3>
             <div class="descriptioncompetence">
                 <ul>
@@ -102,7 +102,7 @@
             </div>
         </div>
         <hr>
-        <div class="detailcompetence2">
+        <div class="detailcompetence comp2color">
             <div>
                 <div class="titreressource">
                     <h3 class="couleurC2fonce">R1.01</h3>
