--- a/Mini projet 2024 F4/html/competence3.html
+++ b/Mini projet 2024 F4/html/competence3.html
@@ -60,7 +60,7 @@
             </div>
         </div>
         <hr>
-        <div class="detailcompetence3">
+        <div class="detailcompetence comp3color">
             <h3>Évaluation :</h3>
             <table class="table-evaluation">
                 <tr class="table-evaluation couleurC3fonce">
@@ -72,7 +72,7 @@
             </table>
         </div>
         <hr>
-        <div class="detailcompetence3">
+        <div class="detailcompetence comp3color">
             <h3>SAE S1.03 : Installation d’un poste pour le développement</h3>
             <div class="descriptioncompetence">
                 <ul>
@@ -102,7 +102,7 @@
             </div>
         </div>
         <hr>
-        <div class="detailcompetence3">
+        <div class="detailcompetence comp3color">
             <div>
                 <div class="titreressource">
                     <h3 class="couleurC3fonce">R1.03</h3>
