--- a/Mini projet 2024 F4/html/competence4.html
+++ b/Mini projet 2024 F4/html/competence4.html
@@ -59,7 +59,7 @@
             </div>
         </div>
         <hr>
-        <div class="detailcompetence4">
+        <div class="detailcompetence comp4color">
             <h3>Évaluation :</h3>
             <table class="table-evaluation">
                 <tr class="table-evaluation couleurC4fonce">
@@ -71,7 +71,7 @@
             </table>
         </div>
         <hr>
-        <div class="detailcompetence4">
+        <div class="detailcompetence comp4color">
             <h3>SAE S1.04 : Création d’une base de données</h3>
             <div class="descriptioncompetence">
                 <ul>
@@ -99,7 +99,7 @@
             </div>
         </div>
         <hr>
-        <div class="detailcompetence4">
+        <div class="detailcompetence comp4color">
             <div>
                 <div class="titreressource">
                     <h3 class="couleurC4fonce">R1.05</h3>
