--- a/Mini projet 2024 F4/html/competence5.html
+++ b/Mini projet 2024 F4/html/competence5.html
@@ -59,7 +59,7 @@
             </div>
         </div>
         <hr>
-        <div class="detailcompetence5">
+        <div class="detailcompetence comp5color">
             <h3>Évaluation :</h3>
             <table class="table-evaluation">
                 <tr class="table-evaluation couleurC5fonce">
@@ -71,7 +71,7 @@
             </table>
         </div>
         <hr>
-        <div class="detailcompetence5">
+        <div class="detailcompetence comp5color">
             <h3>SAE S1.05 : Recueil de besoins</h3>
             <div class="descriptioncompetence">
                 <ul>
@@ -98,7 +98,7 @@
             </div>
         </div>
         <hr>
-        <div class="detailcompetence5">
+        <div class="detailcompetence comp5color">
             <div>
                 <div class="titreressource">
                     <h3 class="couleurC5fonce">R1.02</h3>
