--- a/Mini projet 2024 F4/index.html
+++ b/Mini projet 2024 F4/index.html
@@ -28,7 +28,7 @@
       <div class="navbar">
           <div class="menu">
               <a href="index.html">Accueil</a>
-              <a href="./html/BUT.html">Présentation du BUT</a>
+              <a href="./html/presentation.html">Présentation du BUT</a>
               <div class="dropdown">
                   <a href="#">Compétences &#9662;</a>
                   <div class="dropdown-content">
@@ -40,7 +40,7 @@
                      <a href="./html/competence6.html">Compétence 6</a>
                   </div>
               </div>
-              <a href="./html/contact.html">Contact</a>
+              <a href="./html/contacts.html">Contact</a>
               <a id="modeToggle" href="#">Mode Sombre</a>
           </div>
       </div>
