--- a/Mini projet 2024 F4/html/competence5.html
+++ b/Mini projet 2024 F4/html/competence5.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>TP 1</title>
-		<link rel="stylesheet" href="../css/style.css">
+		<link rel="stylesheet" href="../css/styles.css">
         <meta name="compétence" content="Présentation des ressources pour la compétence 5">
 
 	</head>
