--- a/Mini projet 2024 F4/html/contacts.html
+++ b/Mini projet 2024 F4/html/contacts.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Contactez l'IUT</title>
-		<link rel="stylesheet" href="../css/style.css">
+		<link rel="stylesheet" href="../css/styles.css">
 		<meta name="contacts" content="Prendre contact avec l'IUT Informatique Paul Sabatier à Toulouse pour le BUT Informatique de Rangueil">
 	</head>
 	<body>
