--- a/Mini projet 2024 F4/html/contacts.html
+++ b/Mini projet 2024 F4/html/contacts.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="fr">
-	<head>
-		<meta charset="utf-8">
-		<title>Contactez l'IUT</title>
-		<link rel="stylesheet" href="../css/style.css">
-		<meta name="contacts" content="Prendre contact avec l'IUT Informatique Paul Sabatier à Toulouse pour le BUT Informatique de Rangueil">
-	</head>
-	<body>
-	
-	
-<!-- Header -->
+<head>
+   <meta charset="UTF-8">
+   <meta name="description" content="Site web étudiant pour présenter le BUT Informatique de l'université Paul Sabatier à Toulouse">
+   <meta name="keywords" content="ompétences BUT Informatique Paul Sabatier">
+   <meta name="author" content="Simonet Michon Viguier-Marie Gibrat">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>BUT Informatique - Université Paul Sabatier</title>
+   <link rel="stylesheet" href="../css/styles.css">
+</head>
 <header>
    <div class="radius">
       <div class="header">
