--- a/Mini projet 2024 F4/html/presentation.html
+++ b/Mini projet 2024 F4/html/presentation.html
@@ -148,34 +148,38 @@
         </div>
 		
 		<!-- Footer -->
-<footer>
-    <div class="footer-container">
-        <!-- Plan du site à gauche -->
-        <div class="footer-section left">
-            <h4>Plan du site</h4>
-            <ul>
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="presentation.html">Présentation du BUT</a></li>
-                <li><a href="competences.html">Compétences</a></li>
-                <li><a href="contacts.html">Contact</a></li>
-            </ul>
-        </div>
-
-
-        <!-- RGPD au centre -->
-        <div class="footer-section center">
-            <h4><a href="https://www.cnil.fr/fr/reglement-europeen-protection-donnees">RGPD - CNIL</a></h4>
-        </div>
-
-
-        <!-- Développement par à droite
-          -->
-        <div class="footer-section right">
-            <h4>Développé par :</h4>
-            <p class="equipe">Equipe 4</p>
-            <p class="equipe">Younes, Tylan, Abigaelle, Matthéo, Florentin</p>
-        </div>
-    </div>
-</footer>
+        <footer class="footer">
+            <div class="plan-du-site">
+                <h3>Plan du site</h3>
+                <ul>
+                    <li><a href="accueil.html">Accueil</a></li>
+                    <li><a href="presentation.html">Présentation du BUT</a></li>
+                    <li>Compétences
+                    <ul>
+                        <li><a href="competence1.html">Compétence 1</a></li>
+                        <li><a href="competence2.html">Compétence 2</a></li>
+                        <li><a href="competence3.html">Compétence 3</a></li>
+                    </ul>
+                    </li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+            <div class="rgpd">
+                <h3>RGPD</h3>
+                <ul>
+                    <li><a href="https://www.cnil.fr/fr">CNIL</a></li>
+                </ul>
+            </div>
+            <div class="enterprise-info">
+                <h3>Entreprise</h3>
+                <ul>
+                    <li>Nom de l'équipe</li>
+                    <li>Ismaël Michon</li>
+                    <li>Victor Simonet</li>
+                    <li>Thomas Viguier-Marie</li>
+                    <li>Grégoire Gibrat</li>
+                </ul>
+            </div>
+        </footer>
 		
     </body>
