--- a/Mini projet 2024 F4/index.html
+++ b/Mini projet 2024 F4/index.html
@@ -289,35 +289,39 @@
     </div>
 	
 	<!-- Footer -->
-<footer>
-    <div class="footer-container">
-        <!-- Plan du site à gauche -->
-        <div class="footer-section left">
-            <h4>Plan du site</h4>
+    <footer class="footer">
+        <div class="plan-du-site">
+            <h3>Plan du site</h3>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
-                <li><a href="presentation.html">Présentation du BUT</a></li>
-                <li><a href="competences.html">Compétences</a></li>
-                <li><a href="contacts.html">Contact</a></li>
+                <li><a href="./html/BUT.html">Présentation du BUT</a></li>
+                <li>Compétences
+                <ul>
+                    <li><a href="./html/competence1.html">Compétence 1</a></li>
+                    <li><a href="./html/competence2.html">Compétence 2</a></li>
+                    <li><a href="./html/competence3.html">Compétence 3</a></li>
+                </ul>
+                </li>
+                <li><a href="./html/contact.html">Contact</a></li>
             </ul>
         </div>
-
-
-        <!-- RGPD au centre -->
-        <div class="footer-section center">
-            <h4><a href="https://www.cnil.fr/fr/reglement-europeen-protection-donnees">RGPD - CNIL</a></h4>
+        <div class="rgpd">
+            <h3>RGPD</h3>
+            <ul>
+                <li><a href="https://www.cnil.fr/fr">CNIL</a></li>
+            </ul>
         </div>
-
-
-        <!-- Développement par à droite
-          -->
-        <div class="footer-section right">
-            <h4>Développé par :</h4>
-            <p class="equipe">Equipe 4</p>
-            <p class="equipe">Younes, Tylan, Abigaelle, Matthéo, Florentin</p>
+        <div class="enterprise-info">
+            <h3>Entreprise</h3>
+            <ul>
+                <li>Nom de l'équipe</li>
+                <li>Ismaël Michon</li>
+                <li>Victor Simonet</li>
+                <li>Thomas Viguier-Marie</li>
+                <li>Grégoire Gibrat</li>
+            </ul>
         </div>
-    </div>
-</footer>
+    </footer>
 	
 </body>
 </html>
