--- a/Mini projet 2024 F4/html/competence3.html
+++ b/Mini projet 2024 F4/html/competence3.html
@@ -1,49 +1,49 @@
 <!DOCTYPE html>
 <html lang="fr">
-	<head>
-		<meta charset="utf-8">
-		<title>TP 1</title>
-		<link rel="stylesheet" href="../css/styles.css">
-        <meta name="compétence" content="Présentation des ressources pour la compétence 3">
-    
-	</head>
-    <body>
-    <!-- Header -->
-    <header>
-        <div class="header-top">
-            <!-- Logos à gauche -->
-            <div class="logos-left">
-                <img src="img/logo_iut.png" alt="Logo IUT de Toulouse" class="logo">
-                <img src="img/logo_ups.png" alt="Logo UPZ" class="logo"> <!-- logo UPS -->
-            </div>
-
-
-            <!-- Logo à droite -->
-            <div class="logo-right">
-                <img src="img/logo_but.png" alt="Logo BUT Informatique">
-            </div>
-        </div>
-
-
-        <!-- Menu de navigation horizontal -->
-        <nav class="nav-menu">
-            <ul>
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="presentation.html">Présentation du BUT</a></li>
-                <li class="dropdown">
-                    <a href="#">Compétences</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="competence1.html">Compétence 1</a></li>
-                        <li><a href="competence2.html">Compétence 2</a></li>
-                        <li><a href="competence3.html">Compétence 3</a></li>
-                        <li><a href="competence4.html">Compétence 4</a></li>
-                        <li><a href="competence5.html">Compétence 5</a></li>
-                        <li><a href="competence6.html">Compétence 6</a></li>
-                    </ul>
-                </li>
-                <li><a href="contacts.html">Contact</a></li>
-            </ul>
-        </nav>    
+<head>
+   <meta charset="UTF-8">
+   <meta name="description" content="Site web étudiant pour présenter le BUT Informatique de l'université Paul Sabatier à Toulouse">
+   <meta name="keywords" content="ompétences BUT Informatique Paul Sabatier">
+   <meta name="author" content="Simonet Michon Viguier-Marie Gibrat">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>BUT Informatique - Université Paul Sabatier</title>
+   <link rel="stylesheet" href="../css/styles.css">
+</head>
+<header>
+   <div class="radius">
+      <div class="header">
+          <div class="images-left">
+              <a href="index.html">
+                  <img src="../images/logo_info.png" alt="iut informatique logo">
+              </a>
+              <img src="../images/logo_iut.png" alt="Logo IUT">
+          </div>
+          <div class="title">
+              <h1>Université Paul Sabatier</h1>
+          </div>
+          <div class="images-right">
+              <img src="../images/BUTImg.png" alt="Logo BUT">
+          </div>
+      </div>
+      <div class="navbar">
+          <div class="menu">
+              <a href="../index.html">Accueil</a>
+              <a href="presentation.html">Présentation du BUT</a>
+              <div class="dropdown">
+                  <a href="#">Compétences &#9662;</a>
+                  <div class="dropdown-content">
+                     <a href="competence1.html">Compétence 1</a>
+                     <a href="competence2.html">Compétence 2</a>
+                     <a href="competence3.html">Compétence 3</a>
+                     <a href="competence4.html">Compétence 4</a>
+                     <a href="competence5.html">Compétence 5</a>
+                     <a href="competence6.html">Compétence 6</a>
+                  </div>
+              </div>
+              <a href="contacts.html">Contact</a>
+              <a id="modeToggle" href="#">Mode Sombre</a>
+          </div>
+      </div>
     </header>
         <h1>Compétence 3</h1>
         <h2 class="titrepage">Administrer des systèmes informatiques communicants complexes</h2>
