--- a/Mini projet 2024 F4/html/presentation.html
+++ b/Mini projet 2024 F4/html/presentation.html
@@ -215,7 +215,7 @@
                     <div class="competence2"><h3>R1.07 - Outils mathématiques fondamentaux</h3></div>
                 </div>
                 <div class="competence-img">
-                    <a href="competence2.html"><img src="img/Comp2.png" alt="Compétence 2"></a>
+                    <a href="competence2.html"><img src="../images/competence2.JPG" alt="Compétence 2"></a>
                 </div>
             </div>
         </div>
@@ -223,7 +223,7 @@
         <div class="competence-wrapper">
             <div class="competence-block">
                 <div class="competence-img">
-                    <a href="competence3.html"><img src="img/Comp3.png" alt="Compétence 3"></a>
+                    <a href="competence3.html"><img src="../images/competence3.JPG" alt="Compétence 3"></a>
                 </div>
                 <div class="competence-content">
                     <div class="competence3"><h3>R1.03 - Introduction à l'architecture des ordinateurs</h3></div>
@@ -242,7 +242,7 @@
                     <div class="competence4"><h3>R1.09 - Economie durable et numérique</h3></div>
                 </div>
                 <div class="competence-img">
-                    <a href="competence4.html"><img src="img/Comp4.png" alt="Compétence 4"></a>
+                    <a href="competence4.html"><img src="../images/competence4.JPG" alt="Compétence 4"></a>
                 </div>
             </div>
         </div>
@@ -250,7 +250,7 @@
         <div class="competence-wrapper">
             <div class="competence-block">
                 <div class="competence-img">
-                    <a href="competence5.html"><img src="img/Comp5.png" alt="Compétence 5"></a>
+                    <a href="competence5.html"><img src="../images/competence5.JPG" alt="Compétence 5"></a>
                 </div>
                 <div class="competence-content">
                     <div class="competence5"><h3>R1.02 - Développement d'interfaces web</h3></div>
@@ -271,7 +271,7 @@
                     <div class="competence6"><h3>R1.12 - Projet professionnel et personnel</h3></div>
                 </div>
                 <div class="competence-img">
-                    <a href="competence6.html"><img src="img/Comp6.png" alt="Compétence 6"></a>
+                    <a href="competence6.html"><img src="../images/competence6.JPG" alt="Compétence 6"></a>
                 </div>
             </div>
         </div>
