--- a/Mini projet 2024 F4/html/competence5.html
+++ b/Mini projet 2024 F4/html/competence5.html
@@ -274,13 +274,16 @@
         <div class="plan-du-site">
             <h3>Plan du site</h3>
             <ul>
-                <li><a href="accueil.html">Accueil</a></li>
+                <li><a href="../index.html">Accueil</a></li>
                 <li><a href="presentation.html">Présentation du BUT</a></li>
                 <li>Compétences
                 <ul>
                     <li><a href="competence1.html">Compétence 1</a></li>
                     <li><a href="competence2.html">Compétence 2</a></li>
                     <li><a href="competence3.html">Compétence 3</a></li>
+                    <li><a href="competence4.html">Compétence 4</a></li>
+                    <li><a href="competence5.html">Compétence 5</a></li>
+                    <li><a href="competence6.html">Compétence 6</a></li>
                 </ul>
                 </li>
                 <li><a href="contact.html">Contact</a></li>
