--- a/Mini projet 2024 F4/index.html
+++ b/Mini projet 2024 F4/index.html
@@ -48,8 +48,7 @@
     
   <body>
     <div class="article">
-        <img id="BUT" alt="Logo BUT" src="https://iut.univ-tlse3.fr/medias/photo/dl-02-but_1698250623697-png?ID_FICHE=1093830" />
-        <div class="article">
+        <img id="BUT" alt="Logo BUT" src="./images/BUTImg.png" />
             <p>
                 Le Bachelor Universitaire Technologique (BUT) est un diplôme national de licence professionnelle créé en 2019
                 sanctionnant trois années d'études dans un Institut Universitaire de Technologie (IUT). C’est une licence 
@@ -58,8 +57,6 @@
                 <br>
                 Source : <a id="wiki-lien" href="https://fr.wikipedia.org/wiki/Bachelor_universitaire_de_technologie">Wikipedia</a>
             </p>
-            
-        </div>
     </div>
     <hr>
     <div class="article">
