--- a/Mini projet 2024 F4/index.html
+++ b/Mini projet 2024 F4/index.html
@@ -41,7 +41,7 @@
                   </div>
               </div>
               <a href="./html/contacts.html">Contact</a>
-              <a id="modeToggle" href="#">Mode Sombre</a>
+              <a id="modeToggle" href="html/evenements.html">Evenements</a>
           </div>
       </div>
     </header>
