--- a/Mini projet 2024 F4/html/presentation.html
+++ b/Mini projet 2024 F4/html/presentation.html
@@ -41,7 +41,7 @@
                   </div>
               </div>
               <a href="contacts.html">Contact</a>
-              <a id="modeToggle" href="#">Mode Sombre</a>
+              <a id="modeToggle" href="evenements.html">Evenements</a>
           </div>
       </div>
     </header>
