--- a/Mini projet 2024 F4/html/evenements.html
+++ b/Mini projet 2024 F4/html/evenements.html
@@ -1,41 +1,85 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Événement</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Animated Buttons</title>
     <link rel="stylesheet" href="../css/styles.css">
-    <meta name="description" content="Page événement avec des énigmes.">
 </head>
-<body>
-    <div class="mainbody">
-        <h1>Événements</h1>
-        <div class="buttons-container">
-            <button class="enigme-button" id="btn1">Bouton 1</button>
-            <button class="enigme-button" id="btn2">Bouton 2</button>
-            <button class="enigme-button" id="btn3">Bouton 3</button>
-            <button class="enigme-button" id="btn4">Bouton 4</button>
-            <button class="enigme-button" id="btn5">Bouton 5</button>
-            <button class="enigme-button" id="btn6">Bouton 6</button>
-            <button class="enigme-button" id="btn7">Bouton 7</button>
-            <button class="enigme-button" id="btn8">Bouton 8</button>
-            <button class="enigme-button" id="btn9">Bouton 9</button>
-            <button class="enigme-button" id="btn10">Bouton 10</button>
-            <button class="enigme-button" id="btn11">Bouton 11</button>
-            <button class="enigme-button" id="btn12">Bouton 12</button>
-            <button class="enigme-button" id="btn13">Bouton 13</button>
-            <button class="enigme-button" id="btn14">Bouton 14</button>
-            <button class="enigme-button" id="btn15">Bouton 15</button>
-            <button class="enigme-button" id="btn16">Bouton 16</button>
-            <button class="enigme-button" id="btn17">Bouton 17</button>
-            <button class="enigme-button" id="btn18">Bouton 18</button>
-            <button class="enigme-button" id="btn19">Bouton 19</button>
-            <button class="enigme-button" id="btn20">Bouton 20</button>
-            <button class="enigme-button" id="btn21">Bouton 21</button>
-            <button class="enigme-button" id="btn22">Bouton 22</button>
-            <button class="enigme-button" id="btn23">Bouton 23</button>
-            <button class="enigme-button" id="btn24">Bouton 24</button>
-        </div>
-        <div id="enigme-text" class="enigme-text">Passez votre souris sur les boutons pour voir les énigmes.</div>
+<header>
+    <div class="radius">
+       <div class="header">
+           <div class="images-left">
+               <a href="index.html">
+                   <img src="../images/logo_info.png" alt="iut informatique logo">
+               </a>
+               <img src="../images/logo_iut.png" alt="Logo IUT">
+           </div>
+           <div class="title">
+               <h1>Université Paul Sabatier</h1>
+           </div>
+           <div class="images-right">
+               <img src="../images/BUTImg.png" alt="Logo BUT">
+           </div>
+       </div>
+       <div class="navbar">
+           <div class="menu">
+               <a href="../index.html">Accueil</a>
+               <a href="presentation.html">Présentation du BUT</a>
+               <div class="dropdown">
+                   <a href="#">Compétences &#9662;</a>
+                   <div class="dropdown-content">
+                      <a href="competence1.html">Compétence 1</a>
+                      <a href="competence2.html">Compétence 2</a>
+                      <a href="competence3.html">Compétence 3</a>
+                      <a href="competence4.html">Compétence 4</a>
+                      <a href="competence5.html">Compétence 5</a>
+                      <a href="competence6.html">Compétence 6</a>
+                   </div>
+               </div>
+               <a href="contacts.html">Contact</a>
+               <a id="modeToggle" href="evenements.html">Evenements</a>
+           </div>
+       </div>
+     </header>
+<body class="button-stack">
+    <div class="button-container">
+        <button onclick="showMessage()" class="button-event">Jour 1</button>
+        <button onclick="showMessage()" class="button-event">Jour 2</button>
+        <button onclick="showMessage()" class="button-event">Jour 3</button>
+        <button onclick="showMessage()" class="button-event">Jour 4</button>
+        <button onclick="showMessage()" class="button-event">Jour 5</button>
+        <button onclick="showMessage()" class="button-event">Jour 6</button>
+        <button onclick="showMessage()" class="button-event">Jour 7</button>
+        <button onclick="showMessage()" class="button-event">Jour 8</button>
+        <button onclick="showMessage()" class="button-event">Jour 9</button>
+        <button onclick="showMessage()" class="button-event">Jour 10</button>
+        <button onclick="showMessage()" class="button-event">Jour 11</button>
+        <button onclick="showMessage()" class="button-event">Jour 12</button>
+        <button onclick="showMessage()" class="button-event">Jour 13</button>
+        <button onclick="showMessage()" class="button-event">Jour 14</button>
+        <button onclick="showMessage()" class="button-event">Jour 15</button>
+        <button onclick="showMessage()" class="button-event">Jour 15</button>
+        <button onclick="showMessage()" class="button-event">Jour 15</button>
+        <button onclick="showMessage()" class="button-event">Jour 16</button>
+        <button onclick="showMessage()" class="button-event">Jour 17</button>
+        <button onclick="showMessage()" class="button-event">Jour 18</button>
+        <button onclick="showMessage()" class="button-event">Jour 19</button>
+        <button onclick="showMessage()" class="button-event">Jour 20</button>
+        <button onclick="showMessage()" class="button-event">Jour 21</button>
+        <button onclick="showMessage()" class="button-event">Jour 22</button>
+        <button onclick="showMessage()" class="button-event">Jour 23</button>
+        <button onclick="showMessage()" class="button-event">Jour 24</button>
     </div>
+    <div class="message" id="message">Button Clicked!</div>
+    <script>
+        function showMessage() {
+            const message = document.getElementById('message');
+            message.style.display = 'block';
+            setTimeout(() => {
+                message.style.display = 'none';
+            }, 5000);
+        }
+    </script>
 </body>
 </html>
