--- a/Mini projet 2024 F4/index.html
+++ b/Mini projet 2024 F4/index.html
@@ -302,7 +302,8 @@
             </ul>
         </div>
         <div class="rgpd">
-            <h3>RGPD</h3>
+            <input type="checkbox" id="theme-checkbox" style="display:none;">
+            <h3 for="theme-checkbox">RGPD</h3>
             <ul>
                 <li><a href="https://www.cnil.fr/fr">CNIL</a></li>
             </ul>
