--- a/Mini projet 2024 F4/html/evenements.html
+++ b/Mini projet 2024 F4/html/evenements.html
@@ -44,36 +44,34 @@
      </header>
 <body class="button-stack">
     <div class="button-container">
-        <button onclick="showMessage()" class="button-event">Jour 1</button>
-        <button onclick="showMessage()" class="button-event">Jour 2</button>
-        <button onclick="showMessage()" class="button-event">Jour 3</button>
-        <button onclick="showMessage()" class="button-event">Jour 4</button>
-        <button onclick="showMessage()" class="button-event">Jour 5</button>
-        <button onclick="showMessage()" class="button-event">Jour 6</button>
-        <button onclick="showMessage()" class="button-event">Jour 7</button>
-        <button onclick="showMessage()" class="button-event">Jour 8</button>
-        <button onclick="showMessage()" class="button-event">Jour 9</button>
-        <button onclick="showMessage()" class="button-event">Jour 10</button>
-        <button onclick="showMessage()" class="button-event">Jour 11</button>
-        <button onclick="showMessage()" class="button-event">Jour 12</button>
-        <button onclick="showMessage()" class="button-event">Jour 13</button>
-        <button onclick="showMessage()" class="button-event">Jour 14</button>
-        <button onclick="showMessage()" class="button-event">Jour 15</button>
-        <button onclick="showMessage()" class="button-event">Jour 15</button>
-        <button onclick="showMessage()" class="button-event">Jour 15</button>
-        <button onclick="showMessage()" class="button-event">Jour 16</button>
-        <button onclick="showMessage()" class="button-event">Jour 17</button>
-        <button onclick="showMessage()" class="button-event">Jour 18</button>
-        <button onclick="showMessage()" class="button-event">Jour 19</button>
-        <button onclick="showMessage()" class="button-event">Jour 20</button>
-        <button onclick="showMessage()" class="button-event">Jour 21</button>
-        <button onclick="showMessage()" class="button-event">Jour 22</button>
-        <button onclick="showMessage()" class="button-event">Jour 23</button>
-        <button onclick="showMessage()" class="button-event">Jour 24</button>
+        <button onclick="showMessage1()" class="button-event">Jour 1</button>
+        <button onclick="showMessage2()" class="button-event">Jour 2</button>
+        <button onclick="showMessage3()" class="button-event">Jour 3</button>
+        <button onclick="showMessage4()" class="button-event">Jour 4</button>
+        <button onclick="showMessage5()" class="button-event">Jour 5</button>
+        <button onclick="showMessage6()" class="button-event">Jour 6</button>
+        <button onclick="showMessage7()" class="button-event">Jour 7</button>
+        <button onclick="showMessage8()" class="button-event">Jour 8</button>
+        <button onclick="showMessage9()" class="button-event">Jour 9</button>
+        <button onclick="showMessage10()" class="button-event">Jour 10</button>
+        <button onclick="showMessage11()" class="button-event">Jour 11</button>
+        <button onclick="showMessage12()" class="button-event">Jour 12</button>
+        <button onclick="showMessage13()" class="button-event">Jour 13</button>
+        <button onclick="showMessage14()" class="button-event">Jour 14</button>
+        <button onclick="showMessage15()" class="button-event">Jour 15</button>
+        <button onclick="showMessage16()" class="button-event">Jour 16</button>
+        <button onclick="showMessage17()" class="button-event">Jour 17</button>
+        <button onclick="showMessage18()" class="button-event">Jour 18</button>
+        <button onclick="showMessage19()" class="button-event">Jour 19</button>
+        <button onclick="showMessage20()" class="button-event">Jour 20</button>
+        <button onclick="showMessage21()" class="button-event">Jour 21</button>
+        <button onclick="showMessage22()" class="button-event">Jour 22</button>
+        <button onclick="showMessage23()" class="button-event">Jour 23</button>
+        <button onclick="showMessage24()" class="button-event">Jour 24</button>
     </div>
-    <div class="message" id="message">Button Clicked!</div>
+    <div class="message" id="message">bienvenue dans notre calendrier de l'avent! Pour commencer cette aventure titillez Le titre grisée qui contient le lien du Cnil dans la page où vous avez été accueilli, vous risquez d'avoir un courant d'air! </div>
     <script>
-        function showMessage() {
+        function showMessage1() {
             const message = document.getElementById('message');
             if (message.style.display === 'block') {
                 message.style.animation = 'fadeOut 0.5s';
