--- a/Mini projet 2024 F4/index.html
+++ b/Mini projet 2024 F4/index.html
@@ -305,7 +305,7 @@
             </ul>
         </div>
         <div class="rgpd">
-                <a href="#" id="snowLink">RGPD</a>
+                <h3 href="#" id="snowLink">RGPD</h3>
                 <div id="snowContainer"></div>
                 <ul>
                     <li><a href="https://www.cnil.fr/fr">CNIL</a></li>
@@ -342,7 +342,7 @@
 
             setTimeout(function() {
                 snowContainer.style.display = 'none';
-            }, 10000);
+            }, 100000);
         });
     </script>
 </body>
