--- a/Mini projet 2024 F4/html/contacts.html
+++ b/Mini projet 2024 F4/html/contacts.html
@@ -77,16 +77,15 @@
 			<br>
     <div class="partie-basse">
 		<div class="droite-b">
-			<div class="image1">
-				<img id= "icon" src="img/photo-iut.jpg" alt="Photo de l'IUT">
-			</div>
+				<img class= "icon" src="../images/IUTRangeuilIMG.PNG" alt="Photo de l'IUT">
+			
 		</div>
 		<div class="gauche-b">
-			<div class="image2">
-				<p> Adresse de l'IUT : 133 Avenue de Rangueil 31400 Toulouse </p>
-
-				<img id="map" src="img/carte-iut-mini.jpg" alt="Carte montrant la position de l'IUT">
-			</div>
+			<div class="responsive-iframe">
+                <p>Adresse de l'IUT : 133 Avenue de Rangueil 31400 Toulouse</p>
+                <iframe alt="plan maps de l'IUT" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3564.5056698466947!2d1.462372476632582!3d43.570089857801634!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12aebd0016fa0d9f%3A0x76017489e8fc38c!2sIUT%20Informatique%20de%20Paul%20Sabatier!5e1!3m2!1sfr!2sfr!4v1732570723235!5m2!1sfr!2sfr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="plan de l'IUT Informatique Paul Sabatier"></iframe> 
+              </div>
+              
 		</div>
     </div>
 <!-- Footer -->
