--- a/Mini projet 2024 F4/index.html
+++ b/Mini projet 2024 F4/index.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="fr">
 <head>
+   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
    <meta charset="UTF-8">
    <meta name="description" content="Site web étudiant pour présenter le BUT Informatique de l'université Paul Sabatier à Toulouse">
    <meta name="keywords" content="ompétences BUT Informatique Paul Sabatier">
