--- a/Mini projet 2024 F4/index.html
+++ b/Mini projet 2024 F4/index.html
@@ -315,7 +315,7 @@
         <div class="enterprise-info">
             <h3 id="gifTitle" class="title">Entreprise</h3>
             <div id="snowmanPopup" class="snowman-popup">
-                <img src="..\images\animanias-emoji.gif" alt="Snowman GIF">
+                <img src=".\images\animanias-emoji.gif" alt="Snowman GIF">
             </div>
             <ul>
                 <li>Nom de l'équipe</li>
