--- a/Mini projet 2024 F4/html/evenements.html
+++ b/Mini projet 2024 F4/html/evenements.html
@@ -75,7 +75,7 @@
     <div class="message" id="message3">Après une tempête, vous devez retrouver un ami enneigé dans l'entreprise des débuts! Même lieu que la tempête. Afin de garder votre ami au frais.  </div>
     <div class="message" id="message4">L'entreprise des évènements vous réserve une surprise qui vous faire voir de toutes les couleurs!  </div>
     <div class="message" id="message5">Vous avez encore perdu votre ami enneigé, recherchez le dans la cinquième ressource, il devrait se trouver non loin de la SAE S1. </div>
-    <div class="message" id="message6">  </div>
+    <div class="message" id="message6">En découvant cette aventure vous devriez rencontrer un conteur de glace dans la présentation du BUT, le premier anglais technique que vous verrez </div>
     <div class="message" id="message7">bienvenue dans notre calendrier de l'avent! Pour commencer cette aventure titillez Le titre grisée qui contient le lien du Cnil dans la page où vous avez été accueilli, vous risquez d'avoir un courant d'air! </div>
     <div class="message" id="message8">Le temps presse! Bienvenue!  </div>
     <div class="message" id="message9">bienvenue dans notre calendrier de l'avent! Pour commencer cette aventure titillez Le titre grisée qui contient le lien du Cnil dans la page où vous avez été accueilli, vous risquez d'avoir un courant d'air! </div>
