--- a/Mini projet 2024 F4/html/contacts.html
+++ b/Mini projet 2024 F4/html/contacts.html
@@ -117,11 +117,10 @@
     <div class="enterprise-info">
         <h3>Entreprise</h3>
         <ul>
-            <li>Nom de l'équipe</li>
-            <li>Ismaël Michon</li>
-            <li>Victor Simonet</li>
-            <li>Thomas Viguier-Marie</li>
-            <li>Grégoire Gibrat</li>
+            <li>Equipe Trauma Team</li>
+            <li>Ayant Contribué au projet:</li>
+            <li>Jay Agil Yoogan RAMASAMY</li>
+            <li>Victor Simonet Alves Santos</li>
         </ul>
     </div>
 </footer>
