--- a/Mini projet 2024 F4/index.html
+++ b/Mini projet 2024 F4/index.html
@@ -318,11 +318,10 @@
                 <img src=".\images\animanias-emoji.gif" alt="Snowman GIF">
             </div>
             <ul>
-                <li>Nom de l'équipe</li>
-                <li>Ismaël Michon</li>
-                <li>Victor Simonet</li>
-                <li>Thomas Viguier-Marie</li>
-                <li>Grégoire Gibrat</li>
+                <li>Equipe Trauma Team</li>
+                <li>Ayant Contribué au projet:</li>
+                <li>Jay Agil Yoogan RAMASAMY</li>
+                <li>Victor Simonet Alves Santos</li>
             </ul>
         </div>
     </footer>
