--- a/Mini projet 2024 F4/html/evenements.html
+++ b/Mini projet 2024 F4/html/evenements.html
@@ -75,11 +75,11 @@
     <div class="message" id="message3">Après une tempête, vous devez retrouver un ami enneigé dans l'entreprise des débuts! Même lieu que la tempête. Afin de garder votre ami au frais.  </div>
     <div class="message" id="message4">L'entreprise des évènements vous réserve une surprise qui vous faire voir de toutes les couleurs!  </div>
     <div class="message" id="message5">Vous avez encore perdu votre ami enneigé, recherchez le dans la cinquième ressource, il devrait se trouver non loin de la SAE S1. </div>
-    <div class="message" id="message6">En découvant cette aventure vous devriez rencontrer un conteur de glace dans la présentation du BUT, le premier anglais technique que vous verrez parmi les niveau 1 </div>
-    <div class="message" id="message7">bienvenue dans notre calendrier de l'avent! Pour commencer cette aventure titillez Le titre grisée qui contient le lien du Cnil dans la page où vous avez été accueilli, vous risquez d'avoir un courant d'air! </div>
-    <div class="message" id="message8">Le temps presse! Bienvenue!  </div>
+    <div class="message" id="message6">En découvant cette aventure vous devriez rencontrer un conteur de glace dans la présentation du BUT, le premier anglais technique que vous verrez parmi les compétences de niveau 1 </div>
+    <div class="message" id="message7">Connaissez vous un des principaux symboles de noël? trouvez le dans le titre de la quatuor compétence</div>
+    <div class="message" id="message8">  </div>
     <div class="message" id="message9">bienvenue dans notre calendrier de l'avent! Pour commencer cette aventure titillez Le titre grisée qui contient le lien du Cnil dans la page où vous avez été accueilli, vous risquez d'avoir un courant d'air! </div>
-    <div class="message" id="message10">Le temps presse! Bienvenue!  </div>
+    <div class="message" id="message10">AHHHHHHH</div>
     <div class="message" id="message11">bienvenue dans notre calendrier de l'avent! Pour commencer cette aventure titillez Le titre grisée qui contient le lien du Cnil dans la page où vous avez été accueilli, vous risquez d'avoir un courant d'air! </div>
     <div class="message" id="message12">Le temps presse! Bienvenue!  </div>
     <div class="message" id="message13">bienvenue dans notre calendrier de l'avent! Pour commencer cette aventure titillez Le titre grisée qui contient le lien du Cnil dans la page où vous avez été accueilli, vous risquez d'avoir un courant d'air! </div>
@@ -462,11 +462,10 @@
     <div class="enterprise-info">
         <h3 href="#" id="enterprise-info">Entreprise</h3>
         <ul>
-            <li>Nom de l'équipe</li>
-            <li>Ismaël Michon</li>
-            <li>Victor Simonet</li>
-            <li>Thomas Viguier-Marie</li>
-            <li>Grégoire Gibrat</li>
+            <li>Equipe Trauma Team</li>
+            <li>Ayant Contribué au projet:</li>
+            <li>Jay Agil Yoogan RAMASAMY</li>
+            <li>Victor Simonet Alves Santos</li>
         </ul>
     </div>
 </footer>
