--- a/Mini projet 2024 F4/html/evenements.html
+++ b/Mini projet 2024 F4/html/evenements.html
@@ -77,9 +77,9 @@
     <div class="message" id="message5">Vous avez encore perdu votre ami enneigé, recherchez le dans la cinquième ressource, il devrait se trouver non loin de la SAE S1. </div>
     <div class="message" id="message6">En découvant cette aventure vous devriez rencontrer un conteur de glace dans la présentation du BUT, le premier anglais technique que vous verrez parmi les compétences de niveau 1 </div>
     <div class="message" id="message7">Connaissez vous un des principaux symboles de noël? trouvez le dans le titre de la quatuor compétence</div>
-    <div class="message" id="message8">  </div>
-    <div class="message" id="message9">bienvenue dans notre calendrier de l'avent! Pour commencer cette aventure titillez Le titre grisée qui contient le lien du Cnil dans la page où vous avez été accueilli, vous risquez d'avoir un courant d'air! </div>
-    <div class="message" id="message10">AHHHHHHH</div>
+    <div class="message" id="message8">Dans La deuxième compétence de cette magnifique interface web, vous trouverez le hit du moment parmi les créateurs du site  </div>
+    <div class="message" id="message9">Les cadeaux ne vont pas tarder a arriver! appuyer sur le "plan du site" pas loin d'ici pour voir sa localisation!</div>
+    <div class="message" id="message10">AHHHHHHH, les cadeaux! :(</div>
     <div class="message" id="message11">bienvenue dans notre calendrier de l'avent! Pour commencer cette aventure titillez Le titre grisée qui contient le lien du Cnil dans la page où vous avez été accueilli, vous risquez d'avoir un courant d'air! </div>
     <div class="message" id="message12">Le temps presse! Bienvenue!  </div>
     <div class="message" id="message13">bienvenue dans notre calendrier de l'avent! Pour commencer cette aventure titillez Le titre grisée qui contient le lien du Cnil dans la page où vous avez été accueilli, vous risquez d'avoir un courant d'air! </div>
